# BridgeX

./: .env.example  .gitignore  README.md  docker-compose.yml  localnet.json  package.json
.github/workflows/: test.yml
apps/demo/: next.config.js  package.json  tailwind.config.js
apps/demo/.next/: trace
apps/demo/src/components/: MintNFT.tsx  NFTDisplay.tsx  TransferNFT.tsx  WalletConnect.tsx
apps/demo/src/hooks/: useUniversalNFT.ts
apps/demo/src/pages/: _app.tsx  (+1 more)
contracts/evm-connected/universal-nft/: hardhat.config.ts  package.json
contracts/zetachain/universal-nft/: hardhat.config.ts  package.json  tsconfig.json
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  TROUBLESHOOTING.md
gateway-wiring/: package.json  tsconfig.json
gateway-wiring/src/decoders/: evm.ts  solana.ts
gateway-wiring/src/encoders/: evm.ts  solana.ts
gateway-wiring/src/types/: index.ts
programs/solana-universal-nft/: Anchor.toml  Cargo.toml
programs/solana-universal-nft/programs/solana-universal-nft/: Cargo.toml
programs/solana-universal-nft/programs/solana-universal-nft/src/: errors.rs  lib.rs  state.rs
programs/solana-universal-nft/programs/solana-universal-nft/src/instructions/: burn_to_universal.rs  mint_from_universal.rs  mod.rs  update_metadata.rs
programs/solana-universal-nft/tests/: solana-universal-nft.ts
scripts/: configure-contracts.sh  deploy-all.sh  setup-localnet.sh  test-e2e.sh
sdk/: package.json
sdk/src/: index.ts  universal-nft.ts
sdk/src/chains/: evm.ts  solana.ts  zetachain.ts
sdk/src/types/: index.ts
test/e2e/: cross-chain-flow.test.ts
(+11 files in other folders)
