[package]
name = "solana-universal-nft"
version = "0.1.0"
description = "Universal NFT program for cross-chain operations via ZetaChain"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_universal_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", features = ["metadata"] }  # Add metadata feature
mpl-token-metadata = "4.1.2"
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"